# skeleplex-v2

./: pyproject.toml
.github/workflows/: ci.yml  docs.yml
examples/big_label/: big_label.py
examples/end_to_end/: 00_create_data.py  01_radius_map.py  02_skeletonize.py  03_make_graph.py  04_measure.py
examples/example_data/: skeleton_graph_measured.csv  skeleton_graph_measured.json
examples/measurements/: extract_orthogonal_slices.py  measure_and_export.py
examples/viewer/: basic_viewer_usage.py
scripts/: benchmark_chunked_skeleton_upscale.py  view_colored_edge_attributes.py
scripts/fusion_pipeline/: 1_1_fusion.py  1_2_fusion.py  1_3_fusion.py  1_fusion.py  2_1_fusion.py  2_2_fusion.py  2_3_fusion.py  2_4_fusion.py  2_5_fusion.py  3_1_fusion.py  3_2_fusion.py  3_fusion.py  fusion.md
scripts/multi_threading/: parallel_predict_swinUNETER.py  prepare_parallel_prediction.py  submit_parallel_prediction_SwinUnetr.sh
scripts/parallel_skeleton_prediction/: 00_make_demo_image.py  01_initialize_parallel_inference.py  02_infer_skeleton_chunk.py  readme.md
src/skeleplex/app/: __init__.py  _app.py  _curate.py  _data.py  _utils.py  _viewer_controller.py
src/skeleplex/app/qt/: app_controls.py  flat_group_box.py  styles.py  window.py
src/skeleplex/data/: utils.py  y_junctions.py
src/skeleplex/graph/: constants.py  image_to_graph.py  image_to_graph_lazy.py  skeleton_graph.py  spline.py  utils.py
src/skeleplex/measurements/: angles.py  branches.py  graph_properties.py  lumen_classifier.py  utils.py
src/skeleplex/skeleton/: __init__.py  _break_detection.py  _break_detection_lazy.py  _chunked_label.py  _chunked_upscale.py  _upscale.py  distance_field.py
src/skeleplex/utils/: __init__.py  _chunked.py  _inference_slurm.py  _tta.py  _tta_augmentations.py
tests/data/: test_y_junctions.py
tests/graph/: test_skeleton_graph.py
tests/measurements/: test_angles.py
tests/skeleton/: test_break_detection.py  test_break_detection_lazy.py  test_chunked_label.py  test_chunked_upscale.py  test_upscale.py
tests/utils/: test_chunked.py  test_inference_slurm.py  test_tta.py  test_tta_augmentations.py
