# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# https://peps.python.org/pep-0621/
[project]
name = "skeleplex-v2"
dynamic = ["version"]
description = "A Python package for analyzing skeletons."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Kevin Yamauchi", email = "kevin.yamauchi@gmail.com" }]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
# add your package dependencies here
dependencies = [
    "cmap>=0.6.0",
    "einops>=0.8.0",
    "h5py>=3.12.1",
    "networkx>=3.4",
    "numba>=0.60.0",
    "numpy>=2.1.0",
    "pooch",
    "rich>=13.9.4",
    "scikit-image>=0.24.0",
    "skan>=0.12.2",
    "splinebox<0.4.1",
    "trimesh>=4.4.1",
    "scikit-learn>=1.5.0",
    "rtree>=1.3.0",
    "dask>=2025.5.1",
    "zarr >=3.0.8",
    "pyarrow",
    "dask-image>=2023.8.1",
]

# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
# "extras" (e.g. for `pip install .[test]`)
[project.optional-dependencies]
# for visualization
napari = ["napari[pyqt6,optional]"]
cellier = ["cellier[pyqt]>=0.0.12",]
viz = ["app-model"]
torch = ["torch", "morphospaces>=0.0.5"]
cupy = ["cupy-cuda12x"]

#branch measurements requires sam
branch_measurements = ["sam2>=1.0","torch >=2.6.0"]

#synthetic data generation requires igl
synthetic_data = [
    "pysdf>=0.1.9; sys_platform != 'win32'",
    "libigl>=2.6.1; sys_platform == 'win32'"
]
# add dependencies used for testing here
test = ["pytest", "pytest-cov"]
# add anything else you like to have in your dev environment here
dev = [
    "ipython",
    "pdbpp",  # https://github.com/pdbpp/pdbpp
    "pre-commit",
    "rich",  # https://github.com/Textualize/rich
    "ruff",
]
# dependencies for docs
docs = [
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-literate-nav",
    "mkdocs-gen-files",
    "mkdocs-section-index"
]
# all dev dependencies
dev-all = [
    "skeleplex-v2[napari,test,viz,cellier,branch_measurements,synthetic_data,docs,dev]"
]

[project.urls]
homepage = "https://github.com/kevinyamauchi/skeleplex-v2"
repository = "https://github.com/kevinyamauchi/skeleplex-v2"

# Entry points
# https://peps.python.org/pep-0621/#entry-points
# same as console_scripts entry point
# [project.scripts]
# skeleplex-v2-cli = "skeleplex:main_cli"

# [project.entry-points."some.group"]
# tomatoes = "skeleplex:main_tomatoes"

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false  # default is false

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = ["error"]

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

[tool.coverage.run]
source = ["skeleplex"]

# https://github.com/mgedmin/check-manifest#configuration
# add files that you want check-manifest to explicitly ignore here
# (files that are in the repo but shouldn't go in the package)
[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "tests/**/*",
]